--- a/style.css
+++ b/style.css
@@ -45,8 +45,11 @@ body {
   overflow-x: hidden;
   background-color: var(--bg-color);
   color: var(--font-color);
-  background-image: url("wave-lines-vector-png-photo-15.png");
-  background-size: contain;
+  background-image: url("rm218-bb-07.jpg");
+  background-size: 100% 100%;
+  background-position: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 header {
@@ -63,7 +66,7 @@ header + * {
 header,
 footer {
   color: var(--font-color);
-  background-color: rgb(0, 70, 102);
+  background-color: var(--bg-color);
 }
 
 section {
@@ -133,7 +136,7 @@ nav ul {
 
   margin: 0px;
   padding: 20px 0px;
-  background-color: var(--alt-bg-color);
+  background-color: var(--bg-color);
 }
 
 nav ul a {
@@ -171,7 +174,7 @@ nav ul a:hover:after {
   padding: 30px;
   margin: 40px 10px 0 10px;
 
-  background-color: rgba(40, 40, 40, 0.8);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .container-header {
@@ -219,7 +222,7 @@ footer {
   justify-content: space-evenly;
   text-align: center;
   padding: 5px;
-  background-color: var(--alt-bg-color);
+  background-color: var(--bg-color);
 }
 
 footer {
