--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ a:hover {
 
 :root {
   --font-color: white;
-  --bg-color: rgb(0, 70, 102);
+  /*--bg-color: rgb(0, 70, 102);*/
+  --bg-color: black;
   --alt-bg-color: rgb(0, 70, 102);
   --site-width: 1000px;
 }
@@ -134,7 +135,7 @@ nav ul {
 
   gap: 1em;
 
-  margin: 0px;
+  margin: 0px 0px 0px 10px;
   padding: 20px 0px;
   background-color: var(--bg-color);
 }
