Attempt to patch font flicker

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 @font-face {
   font-family: "Lato";
   src: url("./assets/fonts/Lato/Lato-Bold.ttf");
-  font-weight: bold;
+  font-weight: bold 700;
 }
 
 /** Global Styles **/
