--- a/style.css
+++ b/style.css
@@ -232,6 +232,52 @@ nav {
   width: 100%;
 }
 
+.dropdown {
+  position: relative;
+}
+
+.dropdown button {
+  display: inline-flex;
+  align-items: flex-end;
+  gap: 5px;
+  background: none;
+  border: none;
+  color: currentColor;
+  cursor: pointer;
+  font-size: inherit;
+  font-weight: inherit;
+  padding: 0;
+  margin: 0;
+}
+
+.dropdown button svg {
+  stroke: currentColor;
+  height: 1em;
+  width: 1em;
+  transition: transform 150ms ease-out;
+}
+
+.dropdown ul {
+  display: none;
+  list-style: none;
+  position: absolute;
+  display: none;
+  flex-direction: column;
+  gap: 0.5em;
+  background-color: var(--alt-bg-color);
+  border: 1px solid var(--font-color);
+  padding: 0.5em;
+  z-index: 1;
+}
+
+.dropdown .open svg {
+  transform: rotate(180deg);
+}
+
+.dropdown .open + ul {
+  display: block;
+}
+
 /** Containers **/
 
 section {
