--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   /*--bg-color: rgb(0, 70, 102);*/
   --bg-color: rgb(13, 18, 28);
   --alt-bg-color: rgb(7, 9, 12);
+  --card-bg-color: #171318;
   --site-width: 1000px;
   --ul-height: 18rem;
 }
@@ -358,6 +359,37 @@ footer img {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+/* Forms */
+fieldset {
+  border: none;
+  margin-bottom: 1rem;
+}
+
+legend {
+  padding-inline: 0;
+  font-size: 1.2rem;
+}
+
+/* Label above input */
+label.above,
+.above label {
+  display: inline-grid;
+}
+
+.form--product {
+  background-color: var(--bg-color);
+}
+
+#submit-message {
+}
+
+#submit-message.success {
+  color: greenyellow;
+}
+#submit-message.failure {
+  color: red;
 }
 
 .mobile-only {
