--- a/style.css
+++ b/style.css
@@ -52,6 +52,13 @@ h1 {
   font-size: 2rem;
 }
 
+/* Make icons inline */
+a {
+  display: flex;
+  align-items: center;
+  gap: 0.2em;
+}
+
 /* Link color reset */
 a,
 a:active,
@@ -325,8 +332,9 @@ section {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  gap: 25px;
+  margin-top: 10px;
   justify-content: center;
-  gap: 10px;
 }
 
 .download-card {
@@ -344,10 +352,21 @@ section {
   height: 50px;
 }
 
+.download-card--icon--inline {
+  height: 1em;
+  display: inline-flex;
+  margin: 0;
+}
+
+.download-card--link {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
 .container-header {
   color: white;
   text-align: center;
-  margin-top: 0;
+  margin: 0;
 }
 
 .container-text {
