--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ h1 {
 }
 
 /* Make icons inline */
-a {
+a,
+button {
   display: flex;
   align-items: center;
   gap: 0.2em;
@@ -82,6 +83,12 @@ button.icon {
   cursor: pointer;
 
   padding: 0;
+}
+
+img.icon {
+  height: 1.2em;
+  padding: 0;
+  margin: 0;
 }
 
 .ham-icon {
@@ -343,6 +350,10 @@ section {
   align-items: center;
 }
 
+.download-card > button {
+  margin-top: 0.5em;
+}
+
 .download-card--icon {
   height: 100px;
   margin-bottom: 20px;
@@ -406,6 +417,10 @@ button,
   padding: 0.5em 1.2em;
   cursor: pointer;
   text-decoration: none;
+}
+
+button.success {
+  background-color: green;
 }
 
 /** Footer **/
