--- a/store/registration.css
+++ b/store/registration.css
@@ -42,9 +42,9 @@ h1 {
     margin-bottom: 20px;
 }
 hr {
-    border: solid white 2.5px;
+    border: solid white 1px;
     height: 1px;
-    background: linear-gradient(90deg, #004b78, #431235);
+    background: white;
     margin: 20px 0;
     width: 60%;
 }
