--- a/store/registration.css
+++ b/store/registration.css
@@ -58,5 +58,22 @@ textarea {
     font-size: 1em;
     color: #333;
     background: transparent;
-    filter: blur(10px);
+}
+#wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin: 20px 0;
+    gap: 20px;
+}
+#wrap fieldset {
+    width: 45%;
+    max-width: 800px;
+    background: rgba(255, 255, 255, 0.1);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border: solid 1px rgba(255, 255, 255, 0.8);
 }
