--- a/store/registration.css
+++ b/store/registration.css
@@ -61,7 +61,6 @@ textarea {
 }
 #wrap {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100%;
@@ -69,11 +68,12 @@ textarea {
     gap: 20px;
 }
 #wrap fieldset {
-    width: 45%;
+    width: fit-content;
     max-width: 800px;
     background: rgba(255, 255, 255, 0.1);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border: solid 1px rgba(255, 255, 255, 0.8);
+    flex: 1 1 50;
 }
