--- a/store/registration.css
+++ b/store/registration.css
@@ -60,6 +60,7 @@ textarea {
     background: transparent;
 }
 #wrap {
+    flex-wrap: wrap;
     display: flex;
     align-items: center;
     justify-content: center;
