--- a/store/registration.css
+++ b/store/registration.css
@@ -78,3 +78,14 @@ textarea {
     border: solid 1px rgba(255, 255, 255, 0.8);
     flex: 1 1 50;
 }
+@media (max-width: 500px) {
+    #wrap {
+        flex-direction: column;
+        align-items: center;
+    }
+    #wrap fieldset {
+        width: 100%;
+        max-width: 100%;
+        word-wrap: break-word;
+    }
+}
