--- a/store/registration.css
+++ b/store/registration.css
@@ -84,8 +84,12 @@ textarea {
         align-items: center;
     }
     #wrap fieldset {
-        width: 100%;
-        max-width: 100%;
+        /* width: 100%; */
+        /* max-width: 100%; */
         word-wrap: break-word;
+    }
+    fieldset label {
+        flex-direction: column;
+        align-items: flex-start;
     }
 }
