--- a/store/registration.css
+++ b/store/registration.css
@@ -58,6 +58,7 @@ textarea {
     font-size: 1em;
     color: #333;
     background: transparent;
+    resize: vertical;
 }
 #wrap {
     flex-wrap: wrap;
