--- a/store/registration.css
+++ b/store/registration.css
@@ -56,7 +56,7 @@ textarea {
     border: 1px solid #ccc;
     font-family: monospace;
     font-size: 1em;
-    color: #333;
+    color: white;
     background: transparent;
     resize: vertical;
 }
