--- a/equipment-registration/registration.css
+++ b/equipment-registration/registration.css
@@ -19,6 +19,7 @@ fieldset select option {
   padding: 4px 8px;
 }
 fieldset {
+  position: relative;
   display: flex;
   justify-content: space-evenly;
   gap: 20px;
@@ -31,6 +32,14 @@ button {
   border-radius: 5px;
   cursor: pointer;
   width: fit-content;
+}
+.button--delete {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+
+  background: transparent;
+  border: 1px solid currentColor;
 }
 legend {
   font-size: 1.2em;
@@ -61,7 +70,7 @@ textarea {
   background: transparent;
   resize: vertical;
 }
-#wrap {
+.wrap {
   flex-wrap: wrap;
   display: flex;
   align-items: center;
@@ -70,7 +79,7 @@ textarea {
   margin: 20px 0;
   gap: 20px;
 }
-#wrap fieldset {
+fieldset.wrap {
   width: fit-content;
   max-width: 800px;
   background: rgba(255, 255, 255, 0.1);
@@ -82,11 +91,11 @@ textarea {
   flex-basis: 50%;
 }
 @media (max-width: 500px) {
-  #wrap {
+  .wrap {
     flex-direction: column;
     align-items: center;
   }
-  #wrap fieldset {
+  fieldset.wrap {
     /* width: 100%; */
     /* max-width: 100%; */
     word-wrap: break-word;
